prevent images from peeking behind header

--- a/css/sbn-header.css
+++ b/css/sbn-header.css
@@ -5,12 +5,10 @@
     color: #ededed;
     display: flex;
     flex-flow: row nowrap;
-    align-items: flex-end;
     background-image: url("../images/bennu.jpg");
     background-size: 40%;
     background-repeat: no-repeat;
     background-position-x: right;
-    
 }
 
 .sbn-title-container {
@@ -18,11 +16,13 @@
     max-width: 60vw;
     margin-left: 1em;
     padding-bottom: 16px;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .sbn-title {
+    margin-top: auto;
     line-height: initial;
     font-size: 3em;
 }
